--- a/JavaProject/src/main/resources/application.properties
+++ b/JavaProject/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=JavaProject
+server.port=8082
 #Conexion con base de datos
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=ADMIN
 spring.datasource.password=1234
 spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
